# bug-hunter

./: README.md  docker-compose.yaml  pre-commit-config.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: database.py  main.py
backend/app/models/: feedback.py  file.py  review.py  review_mistake.py  reviewed_smell.py  smell.py  smell_record.py  task.py  task_group.py  task_model.py  utils.py
backend/app/requests/: file_create_request.py  task_create_request.py
backend/app/routers/: feedback_router.py  file_router.py  review_router.py  smell_router.py  task_group_router.py  task_router.py  utils.py
frontend/: Dockerfile  README.md
frontend/app/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo
frontend/app/src/: App.css  App.tsx  axiosInstance.ts  main.tsx  queryClient.ts  types.ts
frontend/app/src/components/: ErrorBoundary.tsx  PageContainer.tsx  SuspenseWithErrorBoundary.tsx  SuspenseWrapper.tsx  Wrapper.tsx
frontend/app/src/data/: consts.ts
frontend/app/src/hooks/: useCodeEditor.tsx  useQuery.tsx  useReviewPage.tsx  useTasksQuery.tsx  useURLQuery.tsx
frontend/app/src/query/: axiosInstance.ts
frontend/app/src/screens/: AdminPage.tsx  FeedbackPage.tsx  LandingPage.tsx  NotFoundPage.tsx  OnboardingPage.tsx  ReviewPage.tsx  TaskPage.tsx
frontend/app/src/store/: useReviewStore.ts  useUserStore.ts
frontend/app/src/util/: convertSelectedSmellsToSmellRecords.ts  range.ts  (+4 more)
(+72 files in other folders)
