[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Maciej Makowski",email = "maciej.makowski2608@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "ruff (>=0.11.2,<0.12.0)",
    "pymongo[srv] (>=4.12.0,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
